# AkkaraDB-CXX

./: .gitignore  CMakeLists.txt  README.md  SPEC.md
akkara/akkaradb/include/akkaradb/: AkkaraDB.hpp  Codec.hpp  Export.hpp  PackedTable.hpp  Stats.hpp
akkara/akkaradb/include/akkaradb/binpack/: BinPack.hpp  TypeAdapter.hpp
akkara/akkaradb/include/akkaradb/detail/: Hash.hpp
akkara/akkaradb/include/akkaradb/typed/: EntityMacros.hpp  PackedTable.hpp  Query.hpp  Serialization.hpp
akkara/akkaradb/src/: AkkaraDB.cpp
akkara/common/: CMakeLists.txt
akkara/common/include/akkaradb/common/: AKHdr32.h  ByteBufferL.h
akkara/common/src/: AKHdr32.cpp  ByteBufferL.cpp
akkara/engine/: CMakeLists.txt
akkara/format-akk/: CMakeLists.txt
akkara/format-api/: CMakeLists.txt
akkara/include/akkara/core/buf/: BufferPool.hpp  BufferView.hpp  OwnedBuffer.hpp
akkara/include/akkara/core/record/: AKHdr32.hpp  MemRecord.hpp  RecordView.hpp
akkara/internal/include/core/: CRC32C.hpp  Status.hpp
akkara/internal/include/core/buffer/: BufferArena.hpp  BufferPool.hpp  BufferView.hpp  MonotonicArena.hpp  OwnedBuffer.hpp  PerThreadArena.hpp  PooledBuffer.hpp
akkara/internal/include/core/memory/: SmallBuffer.hpp
akkara/internal/include/core/net/: TlsStream.hpp
akkara/internal/include/core/record/: AKHdr32.hpp  KeyFingerprint.hpp  MemHdr16.hpp  MemRecord.hpp  OwnedRecord.hpp  RecordView.hpp  SSTHdr32.hpp
akkara/internal/include/core/types/: ByteView.hpp
akkara/internal/include/core/utils/: ArenaGenerator.hpp  StringUtil.hpp
akkara/internal/include/cpu/: CRC32C.hpp
akkara/internal/include/engine/: AkkEngine.hpp  AkkaraDB.hpp  AstEvaluator.hpp  Compression.hpp  StripeLaneWriter.hpp
akkara/internal/include/engine/blob/: BlobFraming.hpp  BlobManager.hpp
akkara/internal/include/engine/cluster/: ClusterConfig.hpp  ClusterManager.hpp  ClusterRouter.hpp  ClusterRuntime.hpp  ReplFraming.hpp  ReplicationClient.hpp  ReplicationServer.hpp
akkara/internal/include/engine/manifest/: Manifest.hpp  ManifestFraming.hpp
akkara/internal/include/engine/memtable/: ARTMemTable.hpp  BPTree.hpp  BPTreeMap.hpp  BPTreeMemTable.hpp  IMemMap.hpp  IMemTable.hpp  IMemTableIterator.hpp  MemTable.hpp  SkipListMap.hpp  SkipListMemTable.hpp
akkara/internal/include/engine/server/: AkkApiServer.hpp  ApiFraming.hpp  ApiTransport.hpp  HttpApiServer.hpp  TcpApiServer.hpp
akkara/internal/include/engine/sstable/: AKSSFooter.hpp  BloomFilter.hpp  IndexBlock.hpp  SSTCompactor.hpp  SSTFormat.hpp  SSTManager.hpp  SSTReader.hpp  SSTWriter.hpp  SSTableReader.hpp  SSTableWriter.hpp
akkara/internal/include/engine/vlog/: VersionLog.hpp
akkara/internal/include/engine/wal/: WalFraming.hpp  WalOp.hpp  WalReader.hpp  WalRecovery.hpp  WalWriter.hpp
akkara/internal/include/format-akk/: AkkBlockPacker.hpp  AkkBlockUnpacker.hpp  AkkStripeReader.hpp  AkkStripeWriter.hpp
akkara/internal/include/format-akk/parity/: DualXorParityCoder.hpp  NoParityCoder.hpp  XorParityCoder.hpp
akkara/internal/include/format-api/: BlockPacker.hpp  BlockUnpacker.hpp  FlushPolicy.hpp  ParityCoder.hpp  RecordCursor.hpp  StripeReader.hpp  StripeWriter.hpp
akkara/internal/include/net/tls/: TlsStream.hpp
akkara/internal/include/platform/socket/: Socket.hpp
akkara/internal/src/core/: CRC32C.cpp
akkara/internal/src/core/buffer/: BufferArena.cpp  BufferPool.cpp  BufferView.cpp  OwnedBuffer.cpp  PerThreadArena.cpp
akkara/internal/src/core/net/: TlsStream.cpp
akkara/internal/src/core/record/: AKHdr32.cpp  AkHdr32.cpp  KeyFingerprint.cpp  MemHdr16.cpp  MemRecord.cpp  OwnedRecord.cpp  RecordView.cpp  SSTHdr32.cpp
akkara/internal/src/cpu/crc32c/: CRC32CArmCRC.cpp  CRC32CDispatch.cpp  CRC32CRef.cpp  CRC32CX86SSE42.cpp
akkara/internal/src/engine/: AkkEngine.cpp  AkkaraDB.cpp  StripeLaneWriter.cpp
akkara/internal/src/engine/blob/: BlobFraming.cpp  BlobManager.cpp
akkara/internal/src/engine/cluster/: ClusterConfig.cpp  ClusterManager.cpp  ClusterRouter.cpp  ClusterRuntime.cpp  ReplFraming.cpp  ReplicationClient.cpp  ReplicationServer.cpp
akkara/internal/src/engine/manifest/: Manifest.cpp  ManifestFraming.cpp
akkara/internal/src/engine/memtable/: ARTMemTable.cpp  BPTreeMemTable.cpp  MemTable.cpp  SkipListMap.cpp  SkipListMemTable.cpp
akkara/internal/src/engine/server/: AkkApiServer.cpp  ApiFraming.cpp  HttpApiServer.cpp  TcpApiServer.cpp
akkara/internal/src/engine/sstable/: AKSSFooter.cpp  BloomFilter.cpp  IndexBlock.cpp  SSTCompactor.cpp  SSTManager.cpp  SSTReader.cpp  SSTWriter.cpp  SSTableReader.cpp  SSTableWriter.cpp
akkara/internal/src/engine/vlog/: VersionLog.cpp
akkara/internal/src/engine/wal/: WalFraming.cpp  WalOp.cpp  WalReader.cpp  WalRecovery.cpp  (+1 more)
akkara/internal/src/format-akk/: AkkBlockPacker.cpp  AkkBlockUnpacker.cpp  AkkStripeReader.cpp  AkkStripeWriter.cpp
akkara/jni/: AkkaraJni.cpp
akkara/src/core/buf/: BufferPool.cpp  BufferView.cpp  OwnedBuffer.cpp
akkara/src/core/record/: AKHdr.cpp  MemRecord.cpp  RecordView.cpp
benchmarks/: akkaradb_benchmark.hpp  akkaradb_benchmark_part2.hpp  akkaradb_benchmark_part3.hpp  akkengine_smoke_test.cpp  api_server_test.cpp  benchmark.cpp  cluster_smoke_test.cpp  main_benchmark.cpp  manifest_smoke_test.cpp  memtable_smoke_test.cpp  memtable_throughput_benchmark.cpp  sstable_smoke_test.cpp  sstable_throughput_benchmark.cpp  tcp_client_test.py  versionlog_smoke_test.cpp  wal_throughput_benchmark.cpp
benchmarks/api/: api_server_smoke_test.cpp  api_server_test.cpp
benchmarks/smoke/: akkengine_smoke_test.cpp  blob_smoke_test.cpp  manifest_smoke_test.cpp  typed_api_smoke_test.cpp  wal_smoke_test.cpp
benchmarks/suite/: benchmark.cpp
benchmarks/throughput/: memtable_throughput_benchmark.cpp  sstable_bloom_negative_lookup_benchmark.cpp  sstable_throughput_benchmark.cpp  wal_throughput_benchmark.cpp
cmake/: AkkaraDBConfig.cmake.in
readme/en/: ARCHITECTURE_en.md  BENCHMARK.md  README_en.md
readme/ja/: ARCHITECTURE_ja.md  BENCHMARK.md  README_ja.md
readme/ja/benchmarks/: MEMTABLE_BPTREE_ART_BENCHMARK_AND_SETTING.md  SSTABLE_BENCHMARK.md  WAL_BENCHMARK_AND_SETTING.md
(+20 files in other folders)
